folder refractor